--- a/resources/private/common-html/sass/partials/_buttons.scss
+++ b/resources/private/common-html/sass/partials/_buttons.scss
@@ -49,6 +49,7 @@
   span:nth-child(1){
     max-width: 100px;
     height: auto;
+    margin-left: 12px;
   }
 
 }
