--- a/resources/private/common-html/sass/partials/_typography.scss
+++ b/resources/private/common-html/sass/partials/_typography.scss
@@ -39,7 +39,7 @@ h2 {
 h3 {
   font-size: $baseline * 0.75;
   font-family: $font-heading;
-  font-weight: lighter;
+  font-weight: normal;
   margin-bottom: $marginS;
 }
 i {
